Style and UI Fixes:
- Even out whitespace on the landing page
- Even out spacing relative to footer shared element
- Change 'fa-times' Journal Delete button to 'fa-trash-o'
- Bug Fix: Override 'destroy' method on Img class to use correct
           urlRoot
- Changed landing page text-box to `min-height:250px`
- Point to last page of last journal on page-load (LIFO)
- Fixed JournalPage Spacing
- Adding page automatically POSTs new a page
- Fixed issue with saving page text
- Decrease timeout for image upload from 2.5 seconds to 0.5 seconds
- Move `listenTo` on collection 'add' events to callback on `_setFirstModel`
- Moved `this.current_idx` statement to callback
- Fixed New Journal Titling

--- a/static/j_app/landing_page/less/base.less
+++ b/static/j_app/landing_page/less/base.less
@@ -32,7 +32,7 @@
 	overflow: hidden;
 	img {
 		width: 100%;
-		max-height: 100%;
+		height: 100%;
 		margin: 0 auto;
 	}
 }
@@ -45,7 +45,7 @@
 }
 
 .sample-text-input {
-	min-height: 350px;
+	min-height: 250px;
 	border-radius: 10px;
 	margin: 20px 0;
 	font-size: 20px;
